--- a/payroll/calculate/how/index.html
+++ b/payroll/calculate/how/index.html
@@ -87,8 +87,8 @@
 			   <a href="cpp.html#gc-document-nav" class="visible-xs visible-sm">Calculate CPP deductions</a> 
                         </li>
 			  </li>
-			     <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP (CPP2) deductions</a>
-                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP (CPP2) deductions</a> <span class="label label-warning">New - 2024</span>
+			     <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP deductions (CPP2)</a>
+                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP deductions (CPP2)</a> <span class="label label-warning">New - 2024</span>
                         </li>    
 
                         <li><a href="ei.html" class="hidden-xs hidden-sm">Calculate EI deductions</a>
@@ -126,7 +126,7 @@
                <li>
                   <span class="fas fa-laptop text-muted fa-lg fa-li"></span> 
                   <h3>Payroll Deductions Online Calculator (PDOC)</h3>
-                  <p>Use the <span class="fas fa-calculator"></span> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/payroll-deductions-online-calculator.html">PDOC</a> to quickly calculate federal, provincial (except for Quebec) and territorial payroll deductions. PDOC calculates payroll deductions for the most common pay periods (such as weekly or biweekly), based on exact salary figures. </p>
+                  <p>Use the <span class="fas fa-calculator"></span> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/payroll-deductions-online-calculator.html">PDOC</a> to easily calculate federal, provincial (except for Quebec) and territorial payroll deductions. PDOC calculates payroll deductions for the most common pay periods (such as weekly or biweekly), based on exact salary figures. </p>
 <p>The calculator will confirm the deductions you must include on your official statement of earnings.</p>
                </li>
                <li>
@@ -140,6 +140,7 @@
                   <p>Use the following payroll deductions formulas to calculate the required CPP, EI and tax deductions <strong>if you have developed an in-house payroll solution or are a payroll service provider</strong>:</p>
   
                      <ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/payroll/t4127-payroll-deductions-formulas/t4127-jul.html">Payroll Deductions Formulas - 118th Edition - Effective July 1, 2023</a> </li>
 			<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/payroll/t4127-payroll-deductions-formulas/t4127-jan.html">Payroll Deductions Formulas - 117th Edition - Effective January 1, 2023</a> </li>
                         <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/payroll/payroll-deductions-t4127-payroll-deductions-formulas/t4127-jul-116th-edition-effective-july-1-2022.html">Payroll Deductions Formulas - 116th Edition - Effective July 1, 2022</a> </li>
                         <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/payroll/payroll-deductions-t4127-payroll-deductions-formulas/t4127-jan-115th-edition-effective-january-1-2022.html">Payroll Deductions Formulas - 115th Edition - Effective January 1, 2022</a> </li>
@@ -180,7 +181,7 @@
   </li>
 
 <li><h4>
-    <a href="cpp2.html">Calculate second CPP (CPP2) contributions deductions</a>
+    <a href="cpp2.html">Calculate second CPP contributions (CPP2) deductions</a>
   </h4>
   <p><span class="label label-warning">New - 2024</span> How to use the CPP2 contributions tables and how to manually calculate the amount to withhold on the CPP2 contributions
   </p>
