--- a/maire/register.html
+++ b/maire/register.html
@@ -17,7 +17,117 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous"/>
 <!--link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/méli-mélo/2022-06-banff.css" /-->
 <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/méli-mélo/2023-10-mount-revelstoke.css" />
+	  <link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/wet-boew.min.css"/>
+<link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/theme.min.css"/>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
+<link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" rel="stylesheet"/>
+         <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/méli-mélo/2022-06-banff.min.css"/>
+         <link rel="stylesheet" href="https://cra-arc.gc.ca/wet-boew/css/custom/steps.css">
 <!-- Write closure template -->
+	<style type="text/css">
+
+.header-bg {
+            line-height: normal;
+            background: linear-gradient(to right, #ddd 50%, #fff 75%, #fff);
+            }
+            .header-bg .brdr-bttm-fade	 {
+            width: 100%;
+            height: 4px;
+            background: linear-gradient(to right, #26374a 50%, #fff 75%, #fff);
+            }
+            .header-bg h2 {
+            background: linear-gradient(297.5deg, transparent, transparent 25px, white 26px, white 31px, #26374a 32px, #26374a);
+            color: white;
+            display: inline-block;
+            margin: 0px;
+            padding: 5px 30px 5px 15px;
+            min-width: 300px;
+            font-size: 1.3em;
+            }
+            .btn.large-btn {display:flex;flex-direction:row;padding:0;border:2px solid #000; background-color:#fff;width:85%;text-align:center;}
+            .btn.large-btn .icon-btn {flex:none;display:flex;flex-direction:row;align-items:center;}
+            .btn.large-btn .label-btn {flex:auto;display:flex;flex-direction:row;align-items:center;padding:0 5px;}
+            .btn.large-btn .label-btn b {display:block;margin-left:auto;margin-right:auto;}
+            .btn.large-btn .icon-btn img {width:30px;margin:10px 15px;}
+            a.btn-blue:link, a.btn-blue:visited {
+            border:2px solid #003264;
+            color:#222;
+            }
+            a.btn-blue:link .icon-btn, a.btn-blue:visited .icon-btn{
+            background-color:#003264;
+            }
+            a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
+            background: #003264;
+            color: white;
+            }
+            a.btn-red:link, a.btn-red:visited {
+            border:2px solid #990033;
+            color:#222;
+            }
+            a.btn-red:link .icon-btn, a.btn-red:visited .icon-btn{
+            background-color:#990033;
+            }
+            a.btn-red:hover, a.btn-red:active, a.btn-red:focus {
+            background: #990033;
+            color: white;
+            }
+            a.btn-lblue:link, a.btn-lblue:visited {
+            border:2px solid #00749C;
+            color:#222;
+            }
+            a.btn-lblue:link .icon-btn, a.btn-lblue:visited .icon-btn{
+            background: #00749C;
+            }
+            a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
+            background: #00749C;
+            color: white;
+            }
+
+            /*Checkbox/Fieldflow radio input sizing,positioning*/
+            .checkbox-lg > li.checkbox {
+            margin-top: 0px;
+            }
+            .checkbox-lg > li {
+            margin-left: -40px;
+            padding-left: 40px;
+            padding-top: 5px;
+            padding-bottom: 10px;
+            margin-bottom: 5px;
+            padding-right: 15px;
+            }
+            .checkbox-zebra > li:nth-child(2n+1) {
+            background-color: #f5f5f5;
+            padding-top: 10px;
+            padding-bottom: 15px;
+            }
+            .checkbox-lg > li.checkbox input[type=checkbox], .fieldflow-lg .radio input[type=radio] {
+            margin-top: 12px;
+            transform: scale(2);
+            }
+            .checkbox-lg label, .fieldflow-lg, .fieldflow-lg label, .fieldflow-lg div, .fieldflow-lg select, .std-blt {
+            font-size: 20px;
+            line-height: 1.65em;
+            }
+            .std-blt {
+            list-style-type: disc;
+            }
+            .std-blt li label {
+            display: block;
+            padding-left: 0px;
+            }
+            .fieldflow-lg .radio label {
+            margin-left: 40px;
+            }
+            .fieldflow-lg .radio input[type=radio] {
+            margin-left: -40px;
+            }
+            .fieldflow-lg fieldset legend {
+            font-size: 22px;
+            margin-top: 0px;
+            }
+	
+
+</style>
 <script type="text/javascript">
 			document.write(wet.builder.refTop({
 			}));
