--- a/payroll/calculate/how/ei.html
+++ b/payroll/calculate/how/ei.html
@@ -123,7 +123,7 @@
              <li><a href="#h_5">References</a></li>
             </ul>
             <h2 id="h_2">Calculation methods</h2>
- <p class="mrgn-tp-md"><span class="fas fa-bullhorn fa-lg text-muted"></span> <strong>Reminder:</strong> There are <a href="index.html#h_1">online calculators</a> that will calculate the EI premiums deductions for you.</p>
+ <p class="mrgn-tp-md"><span class="fas fa-bullhorn fa-lg text-muted"></span> <strong>Reminder:</strong> There is an <a href="index.html#h_1">online calculator</a> that will calculate the EI premiums deductions for you.</p>
 			
 <p>Calculate EI premiums deductions based on the type of payment:</p>
             <ul class="mrgn-bttm-lg">
