--- a/maire/register.html
+++ b/maire/register.html
@@ -168,7 +168,7 @@
     <h1 property="name" id="wb-cont" dir="ltr">Register for My Account for Individuals</h1>
 
     <div class="row">
-
+<div class="col-lg-7">
     
 		<p>Follow these steps to determine the best way to get access to My Account.</p>
 
