--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -95,8 +95,8 @@
   <li><a href="cpp.html" class="hidden-xs hidden-sm">Calculate CPP deductions</a>
       <a href="cpp.html#gc-document-nav" class="visible-xs visible-sm">Calculate CPP deductions</a> 
    </li>	
- <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP (CPP2) deductions</a> 
-                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP (CPP2) deductions</a> <span class="label label-warning">New - 2024</span>  
+ <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP deductions (CPP2)</a> 
+                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP deductions (CPP2)</a> <span class="label label-warning">New - 2024</span>  
                         </li>     
  <li><a href="ei.html" class="hidden-xs hidden-sm">Calculate EI deductions</a>
       <a href="ei.html#gc-document-nav" class="visible-xs visible-sm">Calculate EI deductions</a> 
@@ -138,7 +138,7 @@
                <li><a href="#h_5">References</a></li>
             </ul>
             <h2 id="h_2">Calculation methods</h2>
-<p><span class="fas fa-bullhorn fa-lg text-muted"></span> <strong>Reminder:</strong> There are <a href="index.html#h_1">online calculators</a> that will calculate the income tax deductions for you.</p>
+<p><span class="fas fa-bullhorn fa-lg text-muted"></span> <strong>Reminder:</strong> There is an <a href="index.html#h_1">online calculator</a> that will calculate the income tax deductions for you.</p>
 
 	<p>Calculate income tax deductions based on the type of payment:</p>
             <ul class="mrgn-bttm-lg">
