--- a/payroll/calculate/how/gsthst.html
+++ b/payroll/calculate/how/gsthst.html
@@ -88,8 +88,8 @@
                         <li><a href="cpp.html" class="hidden-xs hidden-sm">Calculate CPP deductions</a>
                            <a href="cpp.html#gc-document-nav" class="visible-xs visible-sm">Calculate CPP deductions</a> 
                         </li>
-			 <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP (CPP2) deductions</a> 
-                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP (CPP2) deductions</a> <span class="label label-warning">New - 2024</span>  
+			 <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP deductions (CPP2)</a> 
+                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP deductions (CPP2)</a> <span class="label label-warning">New - 2024</span>  
                         </li>     
 <li><a href="ei.html" class="hidden-xs hidden-sm">Calculate EI deductions</a>
       <a href="ei.html#gc-document-nav" class="visible-xs visible-sm">Calculate EI deductions</a> 
