--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -113,7 +113,7 @@
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Calculate second additional CPP contributions (CPP2) deductions</h1>
 <div class="alert alert-warning">
-<p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/how/cpp.html">first maximum pensionable earnings ceiling</a> is reached, you must begin to calculate the second additional CPP contribution (CPP2) on earnings above the <a href="/cra-arc/payroll/calculate/how/cpp.html">annual maximum pensionable earnings</a>.</p>
+<p>Beginning <strong>January 1, 2024</strong>, you must begin to calculate the second additional CPP contribution (CPP2) on earnings above the <a href="/cra-arc/payroll/calculate/how/cpp.html">annual maximum pensionable earnings</a>.</p>
 </div>
 		 <div class="col-xs-12">
                <div class="row">
