--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -109,7 +109,7 @@
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Calculate CPP contributions deductions</h1>
 <div class="alert alert-warning">
-<p>Beginning <strong>January 1, 2024</strong>, once the first maximum pensionable earnings ceiling is reached, you must begin to calculate the <a href="/cra-arc/payroll/calculate/how/cpp2.html">second additional CPP contributions (CPP2)</a> on earnings above the annual maximum pensionable earnings.</p>
+<p>Beginning <strong>January 1, 2024</strong>, you must begin to calculate the <a href="/cra-arc/payroll/calculate/how/cpp2.html">second additional CPP contributions (CPP2)</a> on earnings above the annual maximum pensionable earnings.</p>
 </div>
 		 <div class="col-xs-12">
                <div class="row">
