--- a/payroll/calculate/when/cpprates.html
+++ b/payroll/calculate/when/cpprates.html
@@ -92,7 +92,7 @@
   </nav>
   <h1 property="name" id="wb-cont" class="gc-thickline">CPP contribution rates, maximums and exemptions</h1>
 <div class="alert alert-warning">
-<p>Beginning <strong>January 1, 2024</strong>, once the first maximum pensionable earnings ceiling is reached, you must deduct the <a href="/cra-arc/payroll/calculate/when/cpp2rates.html">second additional CPP contributions (CPP2)</a> on earnings above the annual maximum pensionable earnings.</p>
+<p>Beginning <strong>January 1, 2024</strong>, you must deduct the <a href="/cra-arc/payroll/calculate/when/cpp2rates.html">second additional CPP contributions (CPP2)</a> on earnings above the annual maximum pensionable earnings.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html#h_10">What is the CPP enhancement</a> </p>
 </div>		
 	
