--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -94,7 +94,7 @@
   </nav>
   <h1 property="name" id="wb-cont" class="gc-thickline">Second additional CPP contribution (CPP2) rates and maximums</h1>
 <div class="alert alert-warning">
-<p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/when/cpprates.html">first maximum pensionable earnings ceiling</a> you must deduct the second additional CPP contributions (CPP2) on earnings above the annual maximum pensionable earnings using the following rates and maximums.</p>
+<p>Beginning <strong>January 1, 2024</strong>, you must deduct the second additional CPP contributions (CPP2) on earnings above the <a href="/cra-arc/payroll/calculate/when/cpprates.html">annual maximum pensionable earnings</a> using the following rates and maximums.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html#h_10">What is the CPP enhancement</a> </p>
 
 </div>	
