--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -189,7 +189,7 @@
 <li>
 <h4>Determine if your employee reached the maximum contribution</h4>                          
 <div id="ajax-detmax">           
-<p>Use the applicable calculation depending if your employee is pensionable for the full year or if your employee is pensionable <a href="#stop1" aria-controls="mid-screen" class="overlay-lnk" role="button">only for part of the year (prorate)&nbsp;<span class="far fa-question-circle"></span></a>.</p> 
+<p>Use the applicable calculation if your employee has a pensionable employment for the full year or <a href="#stop1" aria-controls="mid-screen" class="overlay-lnk" role="button">only for part of the year (prorate)&nbsp;<span class="far fa-question-circle"></span></a>.</p> 
 <h5>Employee has more than one employer</h5>
 <p>You <strong>must</strong> withhold CPP contributions until your employee reaches the maximum without taking into account deductions made by another employer.</p>
  
