--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -406,7 +406,7 @@
   
 <li class="cnjnctn-col"><p>
    <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
-<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html#step3a">Calculate second (CPP2) contributions deductions</a>.</p> </li>
+<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html#step3a">Calculate second additional CPP contributions (CPP2) deductions</a>.</p> </li>
 
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum.</li>
@@ -580,7 +580,7 @@
   
 <li class="cnjnctn-col"><p>
    <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
-<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a>.</p> </li>
+<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second additional CPP contributions (CPP2) deductions</a>.</p> </li>
 
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum.</li>
@@ -851,7 +851,7 @@
   
 <li class="cnjnctn-col"><p>
    <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
-<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a>.</p> </li>
+<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second additional CPP contributions (CPP2) deductions</a>.</p> </li>
 
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum.</li>
@@ -987,7 +987,7 @@
   
 <li class="cnjnctn-col"><p>
    <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
-<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html#step2b">Calculate second (CPP2) contributions deductions</a>.</p> </li>
+<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html#step2b">Calculate second additional CPP contributions (CPP2) deductions</a>.</p> </li>
 
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum.</li>
@@ -1473,7 +1473,8 @@
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/page-2.html#h-167794">CPP: 8</a></dt><dd> Contributions by employees and employers in respect of pensionable employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/page-2.html#h-167794">CPP: 8</a></dt><dd> Contributions by employees in respect of pensionable employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/page-3.html#docCont:~:text=Marginal%20note%3A-,Employer%E2%80%99s%20base%20contribution,-9%C2%A0(1">CPP: 9</a></dt><dd> Contributions by employers in respect of pensionable employment </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 11.1</a></dt><dd> Contribution rate </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 12</a></dt><dd> Contributory salary and wages  </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-5.html#docCont">CPP: 19</a></dt><dd> Basic exemption  </dd>
