--- a/maire/register.html
+++ b/maire/register.html
@@ -360,7 +360,25 @@
 							<summary>Sign-in partner</summary>
 							<div id="interactive">
 								<h2 class="mrgn-tp-sm">Example 1</h2>
-						<p>Content 1</p>
+						 <ol class="lst-stps ld-zr">
+            <li class="lst-item">
+              <h2 class="h3" id="h-1">Gather your documents</h2>
+              <p>When you register for an account with the CRA, you will need:</p>
+              <ul class="fa-ul">
+                <li><span class="fas fa-check text-success fa-li"></span>Your assessed tax returns for the 2 most recent tax years
+                  <ul>
+                    <li><strong>If you don't have them:</strong> Your tax return for at least one of the two most recent tax years must have been filed and assessed for you to register.</li>
+                  </ul>
+                </li>
+                <li><span class="fas fa-check text-success fa-li"></span>Your Social Insurance Number
+                  <ul>
+                    <li><strong>Alternatives:</strong> a Temporary Tax Number (TTN) or Individual Tax Number (ITN)</li>
+                  </ul>
+                </li>
+                <li><span class="fas fa-check text-success fa-li"></span>Your date of birth</li>
+                <li><span class="fas fa-check text-success fa-li"></span>Your current postal code or ZIP code (if resident in Canada or the US)</li>
+              </ul>
+
 							</div>
 						</details>
 						<details id="cra">
