--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -1235,7 +1235,7 @@
 				<li>Received after the effective date of their completed and signed Form CPT30 to elect to stop contributing to the CPP</li>
 				<li>Received before and including the month where the employee provided you a completed and signed Form CPT30 to restart contributing to the CPP</li>
 				<li>Received while the employee is considered to be disabled under the CPP or QPP</li>
-				<li>Employment income, benefits, and payments from which you do not deduct CPP</li>
+				<li>Employment income, benefits, and payments from which you are not required to deduct CPP</li>
 				</ul>
 				</details></div>
 				</span>
