--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -344,7 +344,7 @@
 <li>
 <h4 id="step3a">Determine if your employee reached the CPP2 maximum contribution</h4>                          
 <div id="ajax-detmax2">           
-<p>Use the applicable calculation depending if your employee is pensionable for the full year or if your employee is pensionable <a href="#stop1" aria-controls="mid-screen" class="overlay-lnk" role="button">only for part of the year (prorate)&nbsp;<span class="far fa-question-circle"></span></a>.</p> 
+<p>Use the applicable calculation if your employee has a pensionable employment for the full year or <a href="#stop1" aria-controls="mid-screen" class="overlay-lnk" role="button">only for part of the year (prorate)&nbsp;<span class="far fa-question-circle"></span></a>.</p> 
 <h5>Employee has more than one employer</h5>
 <p>You <strong>must</strong> withhold CPP2 contributions until the employee reaches the maximum without taking into account deductions made by another employer.</p>
  
@@ -1282,7 +1282,8 @@
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/page-2.html#h-167794">CPP: 8</a></dt><dd> Contributions by employees and employers in respect of pensionable employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/page-2.html#h-167794">CPP: 8</a></dt><dd> Contributions by employees in respect of pensionable employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/page-3.html#docCont:~:text=Marginal%20note%3A-,Employer%E2%80%99s%20base%20contribution,-9%C2%A0(1">CPP: 9</a></dt><dd> Contributions by employers in respect of pensionable employment </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 11.1</a></dt><dd> Contribution rate </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 11.2</a></dt><dd> First and second additional contribution rates</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 12</a></dt><dd> Contributory salary and wages  </dd>
