--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -427,10 +427,10 @@
 <dl class="dl-horizontal">
 
 <dt><abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr></dt>
-<dd><p id="bx_28"><strong>Do not</strong> use box 28 if you report either of the following:</p>
+<dd><p id="bx_28"><strong>Do not</strong> use box 28 if you report any of the following:</p>
 <ul><li> Pensionable earnings using <a href="#bx_26">box 26</a></li>
 <li>Retiring allowances and no other type of income is paid, reported using <a href="#cd_66">code 66</a>, <a href="#cd_67">code 67</a> <strong>or</strong> <a href="#cd_69">code 69</a> </li>
-<li>An amount greater than "0" using boxes <a href="#bx_16">16</a>, <a href="#bx_16a">16a</a>, <a href="#bx_17">17</a>, <a href="#bx_17a">17a</a> or <a href="#bx_26">26</a> </li>
+<li>An amount greater than "0" using boxes <a href="#bx_16">16</a>, <a href="#bx_16a">16A</a>, <a href="#bx_17">17</a>, <a href="#bx_17a">17A</a> or <a href="#bx_26">26</a> </li>
 <li>Reported "0" in <a href="#bx_26">box 26</a> and the employee gave you a copy of a filled out Form CPT30, Election to Stop Contributing to the Canada Pension Plan, or Revocation of a Prior Election </li>
 </ul>
 
@@ -574,7 +574,7 @@
           </li>
 
 <li class="code-num mrgn-lft-md"><details><summary>Box 54 – Employer's account number </summary>
-               	<p id="bx_54">Enter your <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">business number&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) on your copy and the copy you send to the CRA <strong>only</strong>.</p>
+               	<p id="bx_54">Enter your <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account number&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) on your copy and the copy you send to the CRA <strong>only</strong>.</p>
 	<p><strong>Do not</strong> enter your account number on the copies you give to the employees.</p>            
 		</details>
 		</li>
@@ -714,7 +714,7 @@
      </dd>
 
 <dt><abbr title="Second Canada Pension Plan">CPP2</abbr> contributions</dt>
-<dd> <p><strong>Do not</strong> report <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions using box 16, use <a href="#bx_16a">box 16a</a>.</p>
+<dd> <p><strong>Do not</strong> report <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions using box 16, use <a href="#bx_16a">box 16A</a>.</p>
      </dd>
 
 <dt>Over deductions (overpayment)</dt>
@@ -747,7 +747,7 @@
       </dd>
 
 <dt>Contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
-<dd><p>Report the amounts your employee contributed to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year using <strong>2 </strong> seperate T4 slips as follows:</p>
+<dd><p>Report the amounts your employee contributed to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year using <strong>2 </strong> separate T4 slips as follows:</p>
           <ul>
   <li>1 slip showing the applicable province or territory of employment (other than Quebec), for the CPP contributions you deducted using box 16 and the employee's CPP/QPP pensionable earnings using box 26 </li>	 
 <li>1 slip showing the province of employment as Quebec, for the QPP contributions you deducted using box 17 and the employee's CPP/QPP pensionable earnings using box 26</li>
@@ -766,18 +766,18 @@
 <dl class="dl-horizontal">
 
 <dt>No deductions</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 16a if you <strong>did not</strong> deduct <abbr title="Second Canada Pension Plan">CPP2</abbr>.</p></dd>
+<dd> <p><strong>Do not </strong>report any amount using box 16A if you <strong>did not</strong> deduct <abbr title="Second Canada Pension Plan">CPP2</abbr>.</p></dd>
 
 <dt>Province of employment is Quebec</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 16a if box 10 shows their province of employment is Quebec, use <a href="#bx_17a">box 17a</a>.</p>
+<dd> <p><strong>Do not </strong>report any amount using box 16A if box 10 shows their province of employment is Quebec, use <a href="#bx_17a">box 17A</a>.</p>
      </dd>
 
 <dt><abbr title="First Canada Pension Plan">CPP</abbr> contributions</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 16a if your employee has not reached the first maximum earnings ceiling, use <a href="#bx_16">box 16</a>.</p>
+<dd> <p><strong>Do not </strong>report any amount using box 16A if your employee has not reached the first maximum earnings ceiling, use <a href="#bx_16">box 16</a>.</p>
      </dd>
 
 <dt>Over deductions (overpayment)</dt>
-<dd><p>Report the <strong>total</strong> <abbr title="Second Canada Pension Plan">CPP2</abbr> deductions using box 16a <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
+<dd><p>Report the <strong>total</strong> <abbr title="Second Canada Pension Plan">CPP2</abbr> deductions using box 16A <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
             <p>Learn more if you over deducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a> </li>
@@ -786,7 +786,7 @@
   </dd>
 
 <dt>Under deductions (recovering)</dt>
-<dd><p><strong>Do not </strong>report any recovered amount using box 16a if you under deducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions.</p>
+<dd><p><strong>Do not </strong>report any recovered amount using box 16A if you under deducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions.</p>
             <p>Learn more if you under deducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
@@ -817,7 +817,7 @@
      </dd>
 
 <dt><abbr title="Second Quebec Pension Plan">QPP2</abbr> contributions</dt>
-<dd> <p><strong>Do not </strong>report <abbr title="Second Quebec Pension Plan">QPP2</abbr> contributions using box 17, use <a href="#bx_17a">box 17a</a>.</p>
+<dd> <p><strong>Do not </strong>report <abbr title="Second Quebec Pension Plan">QPP2</abbr> contributions using box 17, use <a href="#bx_17a">box 17A</a>.</p>
      </dd>
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
@@ -826,7 +826,7 @@
 </dd>
 
 <dt>Contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
-<dd><p>Report the amounts your employee contributed to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year using <strong>2 </strong> seperate T4 slips as follows:</p>
+<dd><p>Report the amounts your employee contributed to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year using <strong>2 </strong> separate T4 slips as follows:</p>
           <ul>
   <li>1 slip showing the applicable province or territory of employment (other than Quebec), for the  <abbr title="Canada Pension Plan">CPP</abbr> contributions you deducted using box 16 and the employee's  <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> pensionable earnings using box 26 </li>	 
 <li>1 slip showing the province of employment as Quebec, for the <abbr title="Quebec Pension Plan">QPP</abbr> contributions you deducted using box 17 and the employee's <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> pensionable earnings using box 26</li>
@@ -844,14 +844,14 @@
 <dl class="dl-horizontal">
 
 <dt>No deductions</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 17a if you <strong>did not</strong> deduct <abbr title="Second Quebec Pension Plan">QPP2</abbr>.</p></dd>
+<dd> <p><strong>Do not </strong>report any amount using box 17A if you <strong>did not</strong> deduct <abbr title="Second Quebec Pension Plan">QPP2</abbr>.</p></dd>
 
 <dt>Province of employment is Quebec</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 17a if box 10 shows their province of employment is other than Quebec, use <a href="#bx_16a">box 16a</a>.</p>
+<dd> <p><strong>Do not </strong>report any amount using box 17A if box 10 shows their province of employment is other than Quebec, use <a href="#bx_16a">box 16A</a>.</p>
      </dd>
 
 <dt><abbr title="First Quebec Pension Plan">QPP</abbr> contributions</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 17a if your employee has not reached the first maximum earnings ceiling, use <a href="#bx_17">box 17</a>.</p>
+<dd> <p><strong>Do not </strong>report any amount using box 17A if your employee has not reached the first maximum earnings ceiling, use <a href="#bx_17">box 17</a>.</p>
      </dd>
 
 </dl>
@@ -955,10 +955,10 @@
 <dt>More than 1 slip </dt>
 <dd><p>Report the insurable earnings amount for each period of employment in box 24 of each T4 slip if you give the same employee more than one T4 slip for the year.</p>
             <details><summary>Example</summary>
-            <p>An employee earned $30,000 working in Ontario from January 2021 to June 2021 and earned $30,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 24 as follows:</p>
+            <p>An employee earned $30,000 working in Ontario from January 2023 to June 2023 and earned $30,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 24 as follows:</p>
             <ul>
             <li>Ontario T4 slip &ndash; box 14 = $30,000 and box 24 = $30,000 </li>
-            <li>Quebec T4 slip &ndash; box 14 = $30,000 and box 24 = $26,300 (calculated as the maximum insurable earnings for 2021 of $56,300 &ndash; $30,000 already reported on T4 slip with Ontario as province of employment = $26,300) </li>
+            <li>Quebec T4 slip &ndash; box 14 = $30,000 and box 24 = $26,300 (calculated as the maximum insurable earnings for 2023 of $56,300 &ndash; $30,000 already reported on T4 slip with Ontario as province of employment = $26,300) </li>
             </ul> </details>
             </dd>
 
@@ -976,8 +976,8 @@
 </li>
 
 <li class="code-num mrgn-lft-md"><details> <summary >Box 26 – CPP/QPP pensionable earnings </summary>
- <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings and additional maximum pensionable earnings for the year.</p>
-            <p>Report "0" if the employee had no pensionable earnings and you did not report an amount in boxes 16, 16a, 17 or 17a.</p>
+ <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16A</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17A</a>, up to the maximum pensionable earnings and additional maximum pensionable earnings for the year.</p>
+            <p>Report "0" if the employee had no pensionable earnings and you did not report an amount in boxes 16, 16A, 17 or 17A.</p>
 		<p>In many situations, boxes 14 and 26 will be the same amount.</p>
 
           
@@ -1020,7 +1020,7 @@
             <p>Marion works for her employer in Quebec and is on an unpaid leave of absence. Her employer pays $750 in premiums to an employer-paid private health benefit plan on her behalf. Since the benefit is not taxable outside of Quebec, it is not income. When preparing Marion's Quebec T4 slip, her employer will leave box 14 blank. Since the premiums are QPP pensionable, her employer will report $750 in box 26, the QPP contributions withheld on the benefit in box 17, and fill in any other boxes on her T4 slip as applicable.</p>
          </details>    
 		    <details><summary>Example 2 - Benefit taxable in Quebec - Other earnings</summary>
-            <p>During 2021, Julien received wages of $25,000 plus an $875 benefit that is only taxable in Quebec. When preparing Julien's Quebec T4 slip, his employer will report $25,000 in box 14, $25,875 in box 26, and fill in any other boxes on his T4 slip as applicable.</p>
+            <p>During 2023, Julien received wages of $25,000 plus an $875 benefit that is only taxable in Quebec. When preparing Julien's Quebec T4 slip, his employer will report $25,000 in box 14, $25,875 in box 26, and fill in any other boxes on his T4 slip as applicable.</p>
           </details>    
 		    <details><summary>Example 3 - Benefit taxable in Quebec and federally</summary>
             <p>Stephane works for his employer in Quebec and did not receive any cash earnings. However, his employer gave him a non-cash housing benefit valued at $1,100. When preparing Stephane's Quebec T4 slip, his employer will report $1,100 in boxes 14 and 26, and fill in any other boxes on his T4 slip as applicable.</p>
@@ -1032,10 +1032,10 @@
 <dt>More than 1 slip </dt>
 <dd><p>Report the pensionable earnings amount for each period of employment in box 26 of each T4 slip if you give the same employee more than one T4 slip for the year.</p>
             <details><summary>Example</summary>
-            <p>An employee earned $35,000 working in Ontario from January 2021 to June 2021 and earned $35,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 26 as follows:</p>
+            <p>An employee earned $35,000 working in Ontario from January 2023 to June 2023 and earned $35,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 26 as follows:</p>
             <ul>
             <li>Ontario T4 slip &ndash; box 14 = $35,000 and box 26 = $35,000 </li>
-            <li>Quebec T4 slip &ndash; box 14 = $35,000 and box 24 = $26,600 (calculated as the maximum pensionable earnings for 2021 of $61,600 &ndash; $35,000 already reported on T4 slip with Ontario as province of employment = $26,600) </li>
+            <li>Quebec T4 slip &ndash; box 14 = $35,000 and box 26 = $26,600 (calculated as the maximum pensionable earnings for 2023 of $61,600 &ndash; $35,000 already reported on T4 slip with Ontario as province of employment = $26,600) </li>
             </ul> </details>
             </dd>
 
